# vkd3d-proton

./: .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  ANNOUNCE  AUTHORS  CHANGELOG.md  COPYING  Doxyfile.in  Makefile.am  README  README.md  VP_D3D12_VKD3D_PROTON_profile.json  VP_VKD3D_requirements.json  build-linux32.txt  build-widl.txt  build-win32.txt  build-win64.txt  configure.ac  meson.build  meson_options.txt  package-release.sh  setup-clang-cl.bat  setup-ninja-clang-cl-debug.bat  setup-ninja-clang-cl-debugoptimized.bat  setup-ninja-clang-cl-release.bat  setup-vs-clang-cl-debug.bat  setup-vs-clang-cl-debugoptimized.bat  setup-vs-clang-cl-release.bat  setup_vkd3d_proton.sh  vkd3d_build.h.in  vkd3d_version.c.in  vkd3d_version.h.in
crosslibs/: d3d12.spec  meson.build
demos/: .gitignore  demo.h  demo_win32.h  demo_xcb.h  gears.c  gears.vert  gears_flat.frag  meson.build  triangle.c  triangle.frag  triangle.vert
docs/: sampler_feedback.md  (+4 more)
include/: .gitignore  d3d12.idl  dxgi.idl  dxgi1_2.idl  dxgi1_3.idl  dxgi1_4.idl  dxgibase.h  dxgibase.idl  dxgiformat.idl  dxgitype.idl  meson.build  unknown.idl  vkd3d.h  vkd3d_command_list_vkd3d_ext.idl  vkd3d_command_queue_vkd3d_ext.idl  vkd3d_core_interface.idl  vkd3d_d3d12.idl  vkd3d_d3d12video.idl  vkd3d_d3dcommon.idl  vkd3d_device_vkd3d_ext.idl  vkd3d_dxcapi.idl  vkd3d_dxgi.idl  vkd3d_dxgi1_4.idl  vkd3d_dxgi1_5.idl  vkd3d_dxgibase.idl  vkd3d_dxgiformat.idl  vkd3d_dxgitype.idl  vkd3d_dxvk_interop.idl  vkd3d_shader.h  vkd3d_sonames.h  vkd3d_swapchain_factory.idl  vkd3d_types.h  vkd3d_unknown.idl  vkd3d_utils.h  vkd3d_vk_includes.h  vkd3d_win32.h  vkd3d_windows.h
include/aftermath/: README.txt
include/dummy/: rpc.h  rpcndr.h
include/private/: config_flag_decl.h  config_flags.h  copy_utils.h  hashmap.h  nvShaderExtnEnums.h  rbtree.h  vkd3d_atomic.h  vkd3d_common.h  vkd3d_d3dkmt.h  vkd3d_debug.h  vkd3d_descriptor_qa_data.h  vkd3d_file_utils.h  vkd3d_memory.h  vkd3d_native_sync_handle.h  vkd3d_platform.h  vkd3d_profiling.h  vkd3d_rw_spinlock.h  vkd3d_shader.h  vkd3d_spinlock.h  vkd3d_string.h  vkd3d_test.h  vkd3d_threads.h  vkd3d_utf8.h  vulkan_private_extensions.h
include/shader-debug/: GNUmakefile  debug_channel.h
include/vulkan/: vulkan_core.h
libs/d3d12/: d3d12-32.def  d3d12-64.def  d3d12.def  main.c  meson.build
libs/d3d12core/: d3d12core.def  debug.c  debug.h  main.c  meson.build
libs/vkd3d/: acceleration_structure.c  address_binding_tracker.c  aftermath_integration.c  breadcrumbs.c  bundle.c  cache.c  command.c  command_list_profiled.h  command_list_vkd3d_ext.c  command_queue_vkd3d_ext.c  d3dkmt.c  debug.c  debug_common.c  debug_ring.c  descriptor_debug.c  device.c  device_profiled.h  device_video.c  device_vkd3d_ext.c  heap.c  hud.c  hud_font.h  libvkd3d.pc.in  memory.c  meson.build  meta.c  meta_commands.c  opacity_micromap.c  platform.c  queue_timeline.c  raytracing_pipeline.c  renderdoc.c  resource.c  shared_metadata.c  state.c  state_object_common.c  swapchain.c  swapchain_new.c  timestamp_profiler.c  utils.c  (+16 more)
libs/vkd3d-common/: debug.c  file_utils.c  guid.c  memory.c  meson.build  platform.c  profiling.c  string.c  utf8.c
libs/vkd3d-shader/: checksum.c  dxbc.c  dxil.c  meson.build  spirv.c  trace.c  vkd3d_shader.def  vkd3d_shader.map  vkd3d_shader_main.c  vkd3d_shader_private.h
libs/vkd3d-shader/.deps/: libvkd3d_shader_la-checksum.Plo  libvkd3d_shader_la-dxbc.Plo  libvkd3d_shader_la-dxil.Plo  libvkd3d_shader_la-spirv.Plo  libvkd3d_shader_la-trace.Plo  libvkd3d_shader_la-vkd3d_shader_main.Plo
libs/vkd3d-utils/: libvkd3d-utils.pc.in  meson.build  vkd3d-proton-utils.def  vkd3d_utils-32.def  vkd3d_utils-64.def  vkd3d_utils.map  vkd3d_utils_main.c  vkd3d_utils_private.h
libs/vkd3d/shaders/: cs_clear_uav_buffer_float.comp  cs_clear_uav_buffer_raw.comp  cs_clear_uav_buffer_uint.comp  cs_clear_uav_image_1d_array_float.comp  cs_clear_uav_image_1d_array_uint.comp  cs_clear_uav_image_1d_float.comp  cs_clear_uav_image_1d_uint.comp  cs_clear_uav_image_2d_array_float.comp  cs_clear_uav_image_2d_array_uint.comp  cs_clear_uav_image_2d_float.comp  cs_clear_uav_image_2d_uint.comp  cs_clear_uav_image_3d_float.comp  cs_clear_uav_image_3d_uint.comp  cs_copy_descriptors.comp  cs_emit_nv_memory_decompression_regions.comp  cs_emit_nv_memory_decompression_workgroups.comp  cs_execute_indirect_debug_ring.comp  cs_execute_indirect_multi_dispatch.comp  cs_execute_indirect_multi_dispatch_state.comp  cs_execute_indirect_multi_dispatch_state_debug_ring.comp  cs_execute_indirect_patch.comp  cs_execute_indirect_patch_debug_ring.comp  cs_gdeflate.comp  cs_gdeflate_prepare.comp  cs_predicate_command.comp  cs_predicate_command_execute_indirect.comp  cs_resolve_binary_queries.comp  cs_resolve_color_float.comp  cs_resolve_color_sint.comp  cs_resolve_color_uint.comp  cs_resolve_predicate.comp  cs_resolve_query.comp  cs_sampler_feedback_decode_buffer_min_mip.comp  cs_sampler_feedback_encode_buffer_min_mip.comp  cs_sampler_feedback_encode_image_min_mip.comp  cs_sampler_feedback_encode_image_mip_used.comp  cs_swapchain_fullscreen.comp  cs_workgraph_complete_compaction.comp  cs_workgraph_data_structures.h  cs_workgraph_distribute_payload_offsets.comp  (+24 more)
programs/vkd3d-hlsl-build/: dxbc_library.cpp  dxbc_library.h  dxil_library.cpp  dxil_library.h  main.cpp  meson.build
tests/: .gitignore  d3d12.c  d3d12_bindless.c  d3d12_clear.c  d3d12_clip_cull_distance.c  d3d12_com_wrappers.h  d3d12_command.c  d3d12_copy.c  d3d12_crosstest.h  d3d12_depth_stencil.c  d3d12_descriptors.c  d3d12_device.c  d3d12_dstorage.c  d3d12_dstorage_blobs.h  d3d12_dxvk_interop_device.c  d3d12_enhanced_barriers.c  d3d12_ext_test.c  d3d12_geometry_shader.c  d3d12_invalid_usage.c  d3d12_mesh_shader.c  d3d12_multiview.c  d3d12_pso.c  d3d12_pso_blob.c  d3d12_query.c  d3d12_raytracing.c  d3d12_render_target.c  d3d12_resource.c  d3d12_robustness.c  d3d12_root_signature.c  d3d12_rov.c  d3d12_sampler_feedback.c  d3d12_shaders.c  d3d12_sm_advanced.c  d3d12_sparse.c  d3d12_streamout.c  d3d12_sync.c  d3d12_tessellation.c  d3d12_test_helper.h  d3d12_test_utils.c  d3d12_test_utils.h  (+15 more)
(+1643 files in other folders)
