option('enable_tests',            type : 'boolean', value : false)
option('enable_extras',           type : 'boolean', value : false)
option('enable_profiling',        type : 'boolean', value : false)
option('enable_renderdoc',        type : 'boolean', value : false)
option('enable_descriptor_qa',    type : 'boolean', value : false)
option('enable_trace',            type : 'combo',   value : 'auto', choices : ['false', 'true', 'auto'])
option('enable_tracy',            type : 'boolean', value : false)
option('dynamic_tracy',           type : 'boolean', value : false)
